fix: add spacing

--- a/style.css
+++ b/style.css
@@ -80,12 +80,12 @@ body {
 
 .js-item {
 	cursor: move;
-	padding: 10px;
+	white-space: nowrap;
+	padding: 0.75rem;
 	border: 2px solid black;
 	background-color: white;
 	display: inline-flex;
-	margin-left: 5px;
-	margin-right: 5px;
+	margin: 0.25rem;
 }
 
 .js-item:focus {
